<resources>
    <string name="app_name">ClearApp</string>
    <string name="reg_no_et_hint">Registration Number</string>
    <string name="first_et_hint">First Name</string>
    <string name="last_et_hint">Last Name</string>
    <string name="phone_et_hint">Contact</string>
    <string name="email_et_hint">Email</string>
    <string name="logo_dec">Kisii Logo</string>
    <string name="welcome_text">Welcome to our online clearance system for Kisii University</string>
    <string name="floss_text">Get cleared from Anywhere you want!</string>
    <string name="continue_btn_text">Continue</string>
    <string name="create_account_text">create new account</string>
    <string name="login_btn_text">Login</string>
    <string name="remember_me_text">Remember me</string>
    <string name="pwd_hint">password</string>
    <string name="reg_no_hint">Reg No</string>
    <string name="add_student_btn_text">Add Student</string>

    <!--Spinner Items-->
    <string-array name="courses">
        <item>-- Course --</item>
        <item>Computer Science</item>
        <item>Software Engineering</item>
        <item>Applied Computer Science</item>
        <item>Information Technology</item>

    </string-array>
    <string-array name="campus">
        <item>-- Campus --</item>
        <item>Main</item>
        <item>Kisumu</item>
        <item>Eldoret</item>
        <item>Kericho</item>
        <item>Nyamira</item>
    </string-array>
    <string-array name="program">
        <item>-- Program --</item>
        <item>KUCCPS</item>
        <item>SSP</item>
    </string-array>
    <string-array name="faculty">
        <item>-- Faculty --</item>
        <item>FIST</item>
        <item>LAW</item>
        <item>SOBE</item>
        <item>SPAS</item>
        <item>Agriculture</item>
        <item>Education</item>
        <item>Health Sciences</item>
    </string-array>

    <string-array name="departments">
        <item>Dean Of Faculty</item>
        <item>Chairman Of Dept</item>
        <item>Senior Accountant</item>
        <item>Registrar(A)</item>
        <item>Computer Lab</item>
        <item>Library</item>
        <item>Hostels</item>
        <item>Medical</item>
        <item>Catering</item>
        <item>Game and Sports</item>
        <item>Security Department</item>
    </string-array>

    <string-array name="clearance_status">
        <item>Cleared</item>
        <item>Pending</item>
        <item>Rejected</item>
        <item>Not Requested</item>
    </string-array>

    <string name="title_activity_student_dashboard">StudentDashboard</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Username</string>
    <string name="nav_header_subtitle">Students Registration Number</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="student_clearance_status_title_tv_text">Student Clearance Status</string>
    <string name="not_cleared_text">Not Cleared</string>
    <string name="clearance_status_desc">Clearance Status</string>
    <string name="stud_text">Student</string>
    <string name="officer_text">Clearing Officer</string>
    <string name="admin_text">Administrator</string>
    <string name="clearance_negative_status_text">Student Not Cleared</string>
    <string name="user_avatar_desc">User Avatar</string>

    <string name="officer_home_frag">Welcome Home Officer</string>
    <string name="officer_notifications_frag">Officer Notifications</string>
    <string name="officer_details">Officer Details</string>
    <string name="title_activity_admin_dashboard">AdminDashboardActivity</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_officer_dashboard">OfficerDashboardActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="department_name">Department Name</string>
    <string name="action">Action</string>
    <string name="status">Status</string>
    <string name="not_cleared">Not Cleared</string>
    <string name="student_details">Student Details</string>
    <string name="edit_profile_text">Edit Profile</string>
    <string name="logout">Logout</string>
    <string name="details_name_tv_text">Name:</string>
    <string name="det_studs_name_tv_text">Students\'s Name</string>
    <string name="det_email_tv_text">Email:</string>
    <string name="det_stud_email">wereuallan@gmail.com</string>
    <string name="det_stud_reg_no_tv_text">Reg/No:</string>
    <string name="det_stud_reg_no">IN13/20412/15</string>
    <string name="det_stud_faculty_tv_text">Faculty:</string>
    <string name="stud_faculty">Faculty</string>
    <string name="faculty_name">Faculty Name...</string>
    <string name="det_stud_course_tv_text">Course:</string>
    <string name="studs_course">Computer Science</string>
    <string name="det_stud_program_tv_text">Program:</string>
    <string name="stud_program">KUCCPS</string>
    <string name="det_stud_campus_tv_text">Campus:</string>
    <string name="stude_campus">Main</string>
    <string name="update_text">Update</string>
    <string name="cleared">Cleared</string>
    <string name="officers">Clearing Officers</string>
    <string name="web_dev">Web Developer</string>
    <string name="dev">A developer</string>
    <string name="fsd">Full Stack Developer</string>
    <string name="software_dev">Software Developer</string>
    <string name="home">Home</string>
    <string name="need_an_account">Need An Account ?</string>
    <string name="register_text">Register</string>
    <string name="already_have_an_account">Already Have An Account?</string>
    <string name="change_password">Change Password</string>
    <string name="student_name">Student Name</string>
    <string name="name">Name</string>
    <string name="officer_name">Officer Name</string>
    <string name="add_officer">Add Officer</string>
    <string name="finish_setup">Finish Setup</string>
    <string name="administratir_name">Administratir Name</string>
    <string name="approval">Please wait for Admin\'s Approval</string>
    <string name="admin_name">Admin Name</string>
    <string name="admin_details">Admin Details</string>
    <string name="student">Student</string>
    <string name="dummy_email">example@anyco.xyz</string>
    <string name="officer_id">Officer ID</string>
    <string name="request">Request</string>
    <string name="contact">Contact</string>
    <string name="print_certificate">Print Certificate</string>
    <string name="graduaation_list">Graduaation List</string>
    <string name="deadline">Deadline</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="course">Course</string>
    <string name="course_name">Course Name...</string>
    <string name="kisii_university">Kisii University</string>
    <string name="address">PO POX 408 - 40200 KISII, Kenya</string>
    <string name="school_contact">+254-058-30826</string>
    <string name="school_email">Email: info@kisiiuniversity.ac.ke</string>
    <string name="certificate_title">Fourth Year Clearance Certificate</string>
    <string name="re">RE: TO WHOM IT MAY CONCERN</string>
    <string name="body">This is to certify that the above student has successfully cleared with all the departments and units in Kisii university hence he/she has no accountability. Kindly help him/her where necessary</string>
    <string name="thanks">Thanks</string>
    <string name="official_stamp">Official Stamp...</string>
    <string name="accounts">Accounts</string>
    <string name="filter_by_faculty">Filter By Faculty</string>
    <string name="reg_no">Reg No</string>
    <string name="choose_date">Choose Date</string>
    <string name="set_deadline">Set Deadline</string>

</resources>
