<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_black"
            android:title="@string/home" />
        <item
            android:id="@+id/nav_request"
            android:icon="@drawable/ic_swap_horiz_black_24dp"
            android:title="@string/clearance_status_desc" />
        <item
            android:id="@+id/nav_details"
            android:icon="@drawable/ic_settings_black"
            android:title="@string/student_details" />

        <item
            android:id="@+id/nav_edit_details"
            android:icon="@drawable/ic_edit_black"
            android:title="@string/edit_details" />
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_exit_to_app_black_24dp"
            android:title="@string/logout" />
    </group>


</menu>
