<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".adminfragments.HomeFragment">

    <TextView
        android:layout_width="@dimen/widget_width"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/mag_8dp"
        android:background="@color/colorPrimary"
        android:gravity="center_horizontal"
        android:padding="@dimen/mag_8dp"
        android:text="@string/admin_details"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@android:color/white" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/admin_profile_pic_civ"
        android:layout_width="128dp"
        android:layout_height="128dp"
        android:layout_marginBottom="@dimen/mag_8dp"
        android:contentDescription="@string/nav_header_desc"
        android:paddingTop="@dimen/nav_header_vertical_spacing"
        android:scaleType="centerCrop"
        android:src="@drawable/ic_account_circle_black_24dp"
        app:civ_border_color="@android:color/white"
        app:civ_border_width="2dp" />

    <TextView
        android:id="@+id/admin_name_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/mag_8dp"
        android:gravity="center_horizontal"
        android:padding="@dimen/mag_8dp"
        android:text="@string/admin_name"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/admin_contact_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:gravity="center_horizontal"
        android:padding="@dimen/mag_8dp"
        android:text="@string/phone_et_hint"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <Button
        android:layout_width="@dimen/widget_width"
        android:layout_height="wrap_content"
        android:background="@drawable/round_corner_btn"
        android:text="@string/edit_profile_text"
        android:textColor="@android:color/white" />

</LinearLayout>