<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="64dp">

        <android.support.v7.widget.Toolbar
            android:id="@+id/welcome_tb"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimaryDark">

        </android.support.v7.widget.Toolbar>
    </android.support.design.widget.AppBarLayout>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:contentDescription="@string/logo_dec"
        android:src="@mipmap/kulogo" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginBottom="16dp"
        android:gravity="center_horizontal"
        android:padding="8dp"
        android:text="@string/welcome_text"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginBottom="16dp"
        android:textColor="@android:color/white"
        android:padding="8dp"
        android:text="@string/floss_text"
        android:textSize="18sp" />

    <Button
        android:id="@+id/btnCont"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:background="@drawable/round_corner_btn"
        android:drawableEnd="@drawable/arrow_foward_white"
        android:drawableRight="@drawable/arrow_foward_white"
        android:padding="4dp"
        android:text="@string/continue_btn_text"
        android:textAllCaps="false"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="@android:color/white" />
</LinearLayout>